# markdown-viewer

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
src/: lib.rs  main.rs  watch.rs
static/: index.html  style.css
