[package]
name = "markdown-viewer"
version = "1.0.0"
authors = ["Benjamin Richeson <benricheson101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.10"
nfd = "0.0.4"
notify = "4.0"
web-view = "0.7"
